--- a/Client/src/main/resources/main.fxml
+++ b/Client/src/main/resources/main.fxml
@@ -2,4 +2,4 @@
 
 <?import javafx.scene.layout.*?>
 
-<VBox fx:id="rootNode" alignment="TOP_CENTER" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: linear-gradient(#fff 0%, #eee 10%, #ddd 90%, #bbb 100%);" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController" />
+<VBox fx:id="rootNode" alignment="TOP_CENTER" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: linear-gradient(#fff 0%, #eee 10%, #ddd 90%, #bbb 100%);" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.ilyinus.cloud_storage.controllers.MainController" />
